--- a/index.html
+++ b/index.html
@@ -395,10 +395,33 @@
                        <div class="form-checkbox-group">
                            <label><input type="checkbox" name="drinks" value="Vermut">Vermut</label>
                        </div>
-                        <div class="form-checkbox-group">
-                           <label><input type="checkbox" name="drinks" value="Refrescos">Refrescos</label>
+					   <hr style="margin-bottom: 8px;margin-top: 8px;">
+						<div class="form-checkbox-group">
+                           <label><input type="checkbox" name="drinks" value="CocaCola">Coca Cola</label>
                         </div>
-                       <div class="form-checkbox-group">
+						<div class="form-checkbox-group">
+                           <label><input type="checkbox" name="drinks" value="CocaColaZero">Coca Cola Zero</label>
+                        </div>
+						<div class="form-checkbox-group">
+                           <label><input type="checkbox" name="drinks" value="FantaNaranja">Fanta Naranja</label>
+                        </div>
+						<div class="form-checkbox-group">
+                           <label><input type="checkbox" name="drinks" value="FantaLimon">Fanta Limon</label>
+                        </div>
+						<div class="form-checkbox-group">
+                           <label><input type="checkbox" name="drinks" value="Tonica">Tónica</label>
+                        </div>
+						<div class="form-checkbox-group">
+                           <label><input type="checkbox" name="drinks" value="AquariusLimon">Aquarius Limón</label>
+                        </div>
+						<div class="form-checkbox-group">
+                           <label><input type="checkbox" name="drinks" value="AquariusNaranja">Aquarius Naranja</label>
+                        </div>
+						<div class="form-checkbox-group">
+                           <label><input type="checkbox" name="drinks" value="Nestea">Nestea</label>
+                        </div>
+						<hr style="margin-bottom: 8px;margin-top: 8px;">
+						<div class="form-checkbox-group">
                            <label><input type="checkbox" name="drinks" value="Agua">Agua</label>
                         </div>
                   </div>
