--- a/index.html
+++ b/index.html
@@ -412,6 +412,9 @@
                            <label><input type="checkbox" name="drinks" value="Tonica">Tónica</label>
                         </div>
 						<div class="form-checkbox-group">
+                           <label><input type="checkbox" name="drinks" value="Sprite">Sprite</label>
+                        </div>
+						<div class="form-checkbox-group">
                            <label><input type="checkbox" name="drinks" value="AquariusLimon">Aquarius Limón</label>
                         </div>
 						<div class="form-checkbox-group">
@@ -535,11 +538,13 @@
                         <li>Un billete de lotería</li>
                         <li>Un cheque de 10€ de la tienda de la esquina</li>
                         <li>Los gastos de la luna de miel al completo</li>
+						<li>Una flamenca para poner encima de la tele (es plana)</li>
                          <li>Un paseo en burro por el campo</li>
                         <li class="striked">Un Ferrari testarossa</li>
                         <li>Una bolsa de chuches de la tienda</li>
                          <li>Un ático en Madrid con piscina</li>
                         <li>Una noche de karaoke en casa</li>
+						 <li>Una estampita con la vaquilla del Grand Prix</li>
                         <li>Una suscripción a tu revista favorita</li>
                           <li>Un ramo de flores del supermercado</li>
                      </ul>
