--- a/index.html
+++ b/index.html
@@ -71,16 +71,18 @@
                 <div class="logo"><a href="#"><img src="img/logo.png" alt="Logo"></a></div>
                 <div class="header-nav">
                     <nav>
+					                        <ul class="member-actions" style="top: 11px;margin-left: 0px;">
+
+                            <li><a href="#rsvp" class="btn-white btn-small">Confirma tu asistencia</a></li>
+                        </ul>
                         <ul class="primary-nav">
                             <li><a href="#intro">Info</a></li>
+							                            <li><a href="#events" class="login">Ubicación</a></li>
                             <li><a href="#dress-code">Vestimenta</a></li>
                             <li><a href="#gifts">Regalos</a></li>
 							<li><a href="#wedshoot">Paparazzi</a></li>
                         </ul>
-                        <ul class="member-actions">
-                            <li><a href="#events" class="login">Ubicación</a></li>
-                            <li><a href="#rsvp" class="btn-white btn-small">Confirma tu asistencia</a></li>
-                        </ul>
+
                     </nav>
                 </div>
                 <div class="navicon">
@@ -281,6 +283,56 @@
 					  </div>
                 </div>
 
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="gifts" class="section-padding" style="background-color: #f3dfa1;">
+    <div class="container">
+        <div class="row section-padding">
+            <div class="col-md-4 col-md-offset-4 text-center">
+			<h3>¿Un regalito?</h3>
+							<p>Ya os hemos dicho que no hace falta, pero como parece que insistís...</p>
+                <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#gifts-modal">
+
+                    <i class="fa fa-gift"></i>  Lista de Regalos
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div id="gifts-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>×</span>
+                    </button>
+                    <div class="text-center">
+                        <img src="img/gift-image.png" alt="Regalos de Boda" class="gifts-image">
+                        <h3 class="section-padding">Nuestra lista de regalos</h3>
+                    </div>
+                     <p class="text-center">...aquí van algunas ideas para todos los bolsillos:</p>
+                     <ul class="gifts-list">
+                        <li>Una postal de tu pueblo</li>
+                        <li>Un vale de 5€ de Amazon</li>
+                        <li>Una lata de atún en aceite de oliva</li>
+                         <li class="striked">Un viaje a la luna</li>
+                        <li>Un billete de lotería</li>
+                        <li>Un cheque de 10€ de la tienda de la esquina</li>
+                        <li>Los gastos de la luna de miel al completo</li>
+						<li>Una flamenca para poner encima de la tele (es plana)</li>
+                         <li>Un paseo en burro por el campo</li>
+                        <li class="striked">Un Ferrari testarossa</li>
+                        <li>Una bolsa de chuches de la tienda</li>
+                         <li>Un ático en Madrid con piscina</li>
+                        <li>Una noche de karaoke en casa</li>
+						 <li>Una estampita con la vaquilla del Grand Prix</li>
+                        <li>Una suscripción a tu revista favorita</li>
+                          <li>Un ramo de flores del supermercado</li>
+                     </ul>
+                    <p class="text-center">O si tienes algo mejor, ¡sorpréndenos!</p>
+                </div>
             </div>
         </div>
     </div>
@@ -513,55 +565,7 @@
 </script>
 
 
-<section id="gifts" class="section-padding" style="background-color: #f3dfa1;">
-    <div class="container">
-        <div class="row section-padding">
-            <div class="col-md-4 col-md-offset-4 text-center">
-			<h3>¿Un regalito?</h3>
-							<p>Ya os hemos dicho que no hace falta, pero como parece que insistís...</p>
-                <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#gifts-modal">
 
-                    <i class="fa fa-gift"></i>  Lista de Regalos
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div id="gifts-modal" class="modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>×</span>
-                    </button>
-                    <div class="text-center">
-                        <img src="img/gift-image.png" alt="Regalos de Boda" class="gifts-image">
-                        <h3 class="section-padding">Nuestra lista de regalos</h3>
-                    </div>
-                     <p class="text-center">...aquí van algunas ideas para todos los bolsillos:</p>
-                     <ul class="gifts-list">
-                        <li>Una postal de tu pueblo</li>
-                        <li>Un vale de 5€ de Amazon</li>
-                        <li>Una lata de atún en aceite de oliva</li>
-                         <li class="striked">Un viaje a la luna</li>
-                        <li>Un billete de lotería</li>
-                        <li>Un cheque de 10€ de la tienda de la esquina</li>
-                        <li>Los gastos de la luna de miel al completo</li>
-						<li>Una flamenca para poner encima de la tele (es plana)</li>
-                         <li>Un paseo en burro por el campo</li>
-                        <li class="striked">Un Ferrari testarossa</li>
-                        <li>Una bolsa de chuches de la tienda</li>
-                         <li>Un ático en Madrid con piscina</li>
-                        <li>Una noche de karaoke en casa</li>
-						 <li>Una estampita con la vaquilla del Grand Prix</li>
-                        <li>Una suscripción a tu revista favorita</li>
-                          <li>Un ramo de flores del supermercado</li>
-                     </ul>
-                    <p class="text-center">O si tienes algo mejor, ¡sorpréndenos!</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
 <section id="wedshoot" class="section-padding" style="background-color:#f0f6f7;">
     <div class="container">
