--- a/index.html
+++ b/index.html
@@ -241,19 +241,20 @@
             <div class="col-md-6">
                 <h4>PERMITIDO</h4>
                 <ul class="dress-code-list allowed">
-                    <li><img src="img/placeholder-camisa-hawaiana.jpg" alt="Camisas Hawaianas">Camisas Hawaianas</li>
-                    <li><img src="img/placeholder-chanclas.jpg" alt="Chanclas">Chanclas y sandalias</li>
-                    <li><img src="img/placeholder-pantalones-cortos.jpg" alt="Pantalones Cortos">Pantalones cortos</li>
-                    <li><img src="img/placeholder-traje-bano.jpg" alt="Traje de Baño">Trajes de baño</li>
+                    <li><img src="img/camisa-hawaiana.png" alt="Camisas Hawaianas">Camisas Hawaianas</li>
+                    <li><img src="img/banador.png" alt="Chanclas">Pantalones coloridos o bañadores</li>
+					<li><img src="img/vestido2.png" alt="Traje de Baño">Trajes de baño, vestidos fresquitos</li>
+                    <li><img src="img/chanclas.png" alt="Pantalones Cortos">Chanclas o sandalias</li>
+
                 </ul>
             </div>
             <div class="col-md-6">
                 <h4>NO PERMITIDO</h4>
                 <ul class="dress-code-list not-allowed">
-                     <li><img src="img/placeholder-traje-formal.jpg" alt="Trajes Formales">Trajes formales</li>
-                    <li><img src="img/placeholder-vestidos-largos.jpg" alt="Vestidos Largos">Vestidos largos</li>
-                    <li><img src="img/placeholder-tacones.jpg" alt="Zapatos de tacón">Zapatos de tacón</li>
-                    <li><img src="img/placeholder-corbatas.jpg" alt="Corbatas">Corbatas</li>
+                     <li><img src="img/traje.png" alt="Trajes Formales">Trajes formales</li>
+                    <li><img src="img/vestido3.png" alt="Vestidos Largos">Vestidos largos</li>
+                    <li><img src="img/zapatos.png" alt="Zapatos de tacón">Zapatos de tacón</li>
+                    <li><img src="img/joyas.png" alt="Corbatas">Joyas y abalorios caros</li>
                 </ul>
             </div>
         </div>
@@ -317,8 +318,8 @@
                         <li>Una postal de tu pueblo</li>
                         <li>Un vale de 5€ de Amazon</li>
                         <li>Una lata de atún en aceite de oliva</li>
-                         <li class="striked">Un viaje a la luna</li>
-                        <li>Un billete de lotería</li>
+                         <li class="striked">Un viaje de SpaceX</li>
+                        <li>Un billete de lotería de Navidad</li>
                         <li>Un cheque de 10€ de la tienda de la esquina</li>
                         <li>Los gastos de la luna de miel al completo</li>
 						<li>Una flamenca para poner encima de la tele (es plana)</li>
@@ -326,9 +327,9 @@
                         <li class="striked">Un Ferrari testarossa</li>
                         <li>Una bolsa de chuches de la tienda</li>
                          <li>Un ático en Madrid con piscina</li>
-                        <li>Una noche de karaoke en casa</li>
+                        <li>Sacar a Iki a pasear durante un año</li>
 						 <li>Una estampita con la vaquilla del Grand Prix</li>
-                        <li>Una suscripción a tu revista favorita</li>
+                        <li>Tom Holland o Kit Connor</li>
                           <li>Un ramo de flores del supermercado</li>
                      </ul>
                     <p class="text-center">O si tienes algo mejor, ¡sorpréndenos!</p>
