--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
+            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/coctel1.png" class="wp1"></div>
             <div class="col-md-6">
                 <p><p>Sabemos que esperábais lágrimas, anillos y un ramo volando por los aires... pero no. Ya nos conocéis: no nos gustan los dramas ni las formalidades, pero sí el cachondeo. Así que preparaos para una <strong>ceremonia hawaiana</strong> con un "sacerdote" que tiene más experiencia haciendo chistes malos que casando a parejas.</p>
 
@@ -145,11 +145,11 @@
 <p>Queremos que lo disfrutéis con nosotros. ¡Nos vemos bajo las palmeras (o las sombrillas)! 🌴🍍🍹</p>
             
             </div>
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
+            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/coctel2.png" class="wp2"></div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.jpg" class="wp8"></div>
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.jpg" class="wp9"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/coctel1.png" class="wp8"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/coctel2.png" class="wp9"></div>
         </div>
     </div>
 </section>
@@ -172,6 +172,7 @@
 					<div id="add-to-cal" data-add-to-calendar-button >
                    </div>
 				   <hr>
+				   <p class="Comollegar">- El lugar elegido es una preciosa casita de estilo mediterráneo en Pinto, cerquita de Madrid, está en medio de un campito donde nadie nos molestará así que podremos desfasar 😜</p>
 			<h4>CÓMO LLEGAR</h4>
 			<p class="Comollegar">- Si tenéis coche, motillo, cualquier otro vehículo o algún buen amigo conductor, podéis ir directamente al lugar de la celebración.
 				<br><br>
@@ -179,7 +180,7 @@
 		</div>
 				<div class="col-md-6 text-center left-column-content">
 
-			<h3 class="hora-linea">Ceremonia y comida</h3>
+			<h3 class="hora-linea">"Ceremonia" y comida</h3>
 			<h4>13:00h - 16:00h</h4>
 			<p class="lugar-linea"> <img src="img/location-icon.png" alt="Icono de Ubicación" class="location-icon"> La casita de Pinto</p>
 			<h3 class="hora-linea">Fiesta en la piscina</h3>
@@ -204,13 +205,14 @@
 	 </div>
         <div class="row">
            <div class="col-md-12 map-full-width-iframe">
-                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!3d3046.3219697007476!2d-3.7316635878825157!3d40.224142967218555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd421f006aec1e79%3A0xfa9ea4acc44120a7!2sLa%20Casita%20de%20Pinto%20%7C%20local%20para%20fiestas!5e0!3m2!1ses!2ses!4v1737363581597!5m2!1ses!2ses"
+                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d163903.0476306081!2d-3.722867758622369!3d40.241490522102914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd421f006aec1e79%3A0xfa9ea4acc44120a7!2sLa%20Casita%20de%20Pinto%20%7C%20local%20para%20fiestas!5e0!3m2!1ses!2ses!4v1738131472548!5m2!1ses!2ses"
                          width="100%"
                          height="400"
                          style="border:0;"
                          allowfullscreen=""
                          loading="lazy"
                          referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 
            </div>
         </div>
