--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 		</div>
 				<div class="col-md-6 text-center left-column-content">
 
-			<h3 class="hora-linea">"Ceremonia" y comida</h3>
+			<h3 class="hora-linea">"Ceremonia" y barbacoa</h3>
 			<h4>13:00h - 16:00h</h4>
 			<p class="lugar-linea"> <img src="img/location-icon.png" alt="Icono de Ubicación" class="location-icon"> La casita de Pinto</p>
 			<h3 class="hora-linea">Fiesta en la piscina</h3>
@@ -430,6 +430,7 @@
                           <option value="">¿Vas a querer comer carne tipo barbacoa?</option>
                           <option value="Carne">A tope con la carne</option>
                           <option value="Verdura">Yo iré full verduritas y piña</option>
+						  <option value="INTOLERANCIA">Tengo alguna intolerancia que debéis saber</option>
                        </select>
                   </div>
               </div>
