--- a/index.html
+++ b/index.html
@@ -433,7 +433,6 @@
                           <option value="">¿Vas a querer barbacoa?</option>
                           <option value="Carne">A tope con la carne</option>
                           <option value="Verdura">Yo iré full verduritas y piña</option>
-						  <option value="INTOLERANCIA">Tengo alguna intolerancia que debéis saber</option>
                        </select>
                   </div>
               </div>
@@ -512,9 +511,9 @@
                 <div class="form-input-group">
                     <i class="fa fa-bus"></i>
                     <select name="transport" id="transport">
-                         <option value="">¿Necesitarás transporte de Pinto a la finca?</option>
-                         <option value="ConTransporte">Sí, sólo habrá alcohol en mis venas</option>
-                        <option value="SinTransporte">No, voy por mi cuenta o con algún colega</option>
+                         <option value="">¿Necesitas transporte de Pinto a la finca?</option>
+                         <option value="ConTransporte">Sí, quiero alcohol</option>
+                        <option value="SinTransporte">No, iré por mi cuenta</option>
                     </select>
                  </div>
              </div>
