--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                  <div class="col-md-12">
                     <div class="form-input-group">
                          <i class="fa fa-exclamation-triangle"></i>
-                        <textarea name="intolerancia" class="" placeholder="¿Alguna intolerancia?"></textarea>
+                        <textarea name="intolerancia" class="" placeholder="¿Alguna intolerancia/alergia?"></textarea>
                      </div>
                  </div>
           </div>
@@ -511,7 +511,7 @@
                 <div class="form-input-group">
                     <i class="fa fa-bus"></i>
                     <select name="transport" id="transport">
-                         <option value="">¿Necesitas transporte de Pinto a la finca?</option>
+                         <option value="">¿Necesitas transporte Pinto-finca?</option>
                          <option value="ConTransporte">Sí, quiero alcohol</option>
                         <option value="SinTransporte">No, iré por mi cuenta</option>
                     </select>
