--- a/index.html
+++ b/index.html
@@ -406,8 +406,8 @@
                     <select name="attending" id="attending" required>
                         <option value="">¿Vas a asistir?</option>
                         <option value="Si_full">Sí, de principio a fin</option>
-                        <option value="Si_comida">Sí, sólo ceremonia y comida</option>
-                        <option value="Si_piscina">Sí, sólo fiesta en la piscina</option>
+                        <option value="Si_comida">Sí, solo ceremonia y comida</option>
+                        <option value="Si_piscina">Sí, solo fiesta en la piscina</option>
                         <option value="No">No, sorry :(</option>
                     </select>
                   </div>
