--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
              document.getElementById('food_preference').setAttribute('required', true);
              document.getElementById('transport').setAttribute('required', true);
 
-        } else if(this.value === 'Si_cafe') {
+        } else if(this.value === 'Si_piscina') {
             // Si selecciona sí, muestra preguntas 4 y 5
            question4.style.display = 'block';
             question5.style.display = 'block';
