--- a/index.html
+++ b/index.html
@@ -452,6 +452,12 @@
                   <div class="form-checkbox-container">
                       <h4>¿Qué beberás? (elige tus preferencias)</h4>
                       <div class="form-checkbox-group">
+                            <label><input type="checkbox" name="drinks" value="PiñaColada">Piña Colada</label>
+                      </div>
+					  <div class="form-checkbox-group">
+                            <label><input type="checkbox" name="drinks" value="Margarita">Margarita</label>
+                      </div>
+					  <div class="form-checkbox-group">
                             <label><input type="checkbox" name="drinks" value="Cerveza">Cerveza</label>
                       </div>
                       <div class="form-checkbox-group">
@@ -506,7 +512,7 @@
           </div>
 
           <!-- Pregunta 5: Transporte (inicialmente oculta) -->
-         <div class="row step" id="question5" style="display:none;">
+<!--          <div class="row step" id="question5" style="display:none;">
             <div class="col-md-12">
                 <div class="form-input-group">
                     <i class="fa fa-bus"></i>
@@ -517,7 +523,7 @@
                     </select>
                  </div>
              </div>
-         </div>
+         </div>  -->
 
           <div class="row">
             <div class="col-md-12" id="alert-wrapper"></div>
@@ -588,6 +594,21 @@
     });
 </script>
 
+
+<section id="sorpresa" class="section-padding" style="background-color: #fff6ee;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="header">¿Quieres sorprendernos?</h3>
+				<img src="img/olea.webp" alt="Icono Sorpresa" style="max-width: 150px; margin-bottom: 20px;">
+                <p>Ponte en contacto con nuestras maravillosas Wedding Planners a través de <a href="mailto:info@oleaeventos.com" style="
+    color: #5c4f4f;
+    text-decoration: underline;
+">info@oleaeventos.com</a> para cualquier duda, sugerencia o sorpresilla que queráis hacernos ¡sin que nosotros nos enteremos de nada!</p>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 <section id="wedshoot" class="section-padding" style="background-color:#f0f6f7;">
