--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 							<li><a href="#events">Ubicación</a></li>
                             <li><a href="#dress-code">Vestimenta</a></li>
                             <li><a href="#gifts">Regalos</a></li>
+							<li><a href="#sorpresa">Sorpréndenos</a></li>
 							<li><a href="#wedshoot">Paparazzi</a></li>
                         </ul>
 
@@ -177,7 +178,7 @@
 			<h4>CÓMO LLEGAR</h4>
 			<p class="Comollegar">- Si tenéis coche, motillo, cualquier otro vehículo o algún buen amigo conductor, podéis ir directamente al lugar de la celebración.
 				<br><br>
-				- Si por el contrario no podéis ir por vuestra cuenta o queréis ser libres de beber alcohol sin responsabilidad, podéis ir en transporte público hasta Pinto, y ahí os recogeremos en una fragoneta (no nos da para más el presupuesto, que nos lo hemos gastado todo en la luna de miel).</p>
+				- Si por el contrario no podéis ir por vuestra cuenta o queréis ser libres de beber alcohol sin responsabilidad, podéis ir en transporte público hasta Pinto, y ahí aunque la finca no está muy lejos, os recomendamos pillar un taxi/uber o similar para llegar (no nos da para más el presupuesto, que nos lo hemos gastado todo en la luna de miel).</p>
 		</div>
 				<div class="col-md-6 text-center left-column-content">
 
