--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
                   <div class="form-input-group">
                       <i class="fa fa-cutlery"></i>
                       <select name="food_preference" id="food_preference">
-                          <option value="">¿Vas a querer barbacoa?</option>
-                          <option value="Carne">A tope con la carne</option>
-                          <option value="Verdura">Yo iré full verduritas y piña</option>
+                          <option value="">¿Qué tipo de barbacoa prefieres?</option>
+                          <option value="Carne">Tradicional (carne y verdura)</option>
+                          <option value="Verdura">Vegetal (alternativa vegana y verdura)</option>
                        </select>
                   </div>
               </div>
