--- a/index.html
+++ b/index.html
@@ -409,6 +409,8 @@
                         <option value="Si_full">Sí, de principio a fin</option>
                         <option value="Si_comida">Sí, solo ceremonia y comida</option>
                         <option value="Si_cafe">Sí, solo fiesta en la piscina</option>
+			<option value="Si_sinpostparty">Sí, todo el día pero sin postparty</option>
+			<option value="Solo_postparty">Sí, pero solo a la postparty</option>
                         <option value="No">No, sorry :(</option>
                     </select>
                   </div>
